logout endpoint i testy
